--- a/package.json
+++ b/package.json
@@ -27,12 +27,18 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@tailwindcss/postcss": "^4.0.0",
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/react": "^16.2.0",
 		"@types/node": "^22",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@vitejs/plugin-react": "^4.3.4",
+		"jsdom": "^26.0.0",
 		"postcss": "^8",
 		"tailwindcss": "^4.0.0",
-		"typescript": "^5"
+		"typescript": "^5",
+		"vite-tsconfig-paths": "^5.1.4",
+		"vitest": "^3.0.6"
 	},
 	"engines": {
 		"node": ">=22.0.0"
