--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"format": "biome format --write",
-		"check": "biome check --write"
+		"check": "biome check --write",
+		"unit": "vitest"
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
