--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "next lint",
 		"format": "biome format --write",
 		"check": "biome check --write",
-		"unit": "vitest"
+		"unit": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -34,6 +35,7 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@vitejs/plugin-react": "^4.3.4",
+		"@vitest/coverage-v8": "^3.0.6",
 		"jsdom": "^26.0.0",
 		"postcss": "^8",
 		"tailwindcss": "^4.0.0",
