--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@playwright/test": "^1.50.1",
 		"@tailwindcss/postcss": "^4.0.0",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.2.0",
