--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"check": "biome check --write",
 		"unit": "vitest",
 		"coverage": "vitest run --coverage",
-		"coverage:open": "vitest run --coverage && open coverage/index.html"
+		"coverage:open": "vitest run --coverage && open coverage/index.html",
+		"e2e": "playwright test",
+		"e2e:ui": "playwright test --ui",
+		"e2e:watch": "PWTEST_WATCH=1 playwright test"
 	},
 	"dependencies": {
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
