--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -21,26 +21,24 @@ jobs:
       run: npm install -g pnpm
 
     # ------------------------------------
-    # node_modules cache
+    # node_modules
     # ------------------------------------
-    - name: Restore node_modules cache
-      id: restore-node-modules
-      uses: actions/cache/restore@v4
-      with:
-        path: node_modules
-        key: node-modules-${{ github.event_name == 'pull_request' && github.base_ref || github.ref_name }}-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-
     - name: Install dependencies
-      if: steps.restore-node-modules.outputs.cache-hit != 'true'
       run: pnpm install --frozen-lockfile
 
-    - name: Save node_modules cache
-      if: steps.restore-node-modules.outputs.cache-hit != 'false'
-      uses: actions/cache/save@v4
+    # ------------------------------------
+    # Next.js build with cache
+    # ------------------------------------
+    - name: Cache Next.js build
+      id: cache-build
+      uses: actions/cache@v4
       with:
-        path: node_modules
-        key: node-modules-${{ github.ref_name }}-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        path: .next/cache
+        key: build-${{ github.ref_name }}-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}-${{ hashFiles('**/*.js', '**/*.jsx', '**/*.ts', '**/*.tsx') }}
+        restore-keys: build-${{ github.ref_name }}-${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
 
+    - name: Run Build
+      run: pnpm build
 
     # ------------------------------------
     # Playwright Browsers
