--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -38,7 +38,7 @@ jobs:
       run: pnpm build
 
     # ------------------------------------
-    # Install Playwright Browsers using cache
+    # Install Playwright using cache
     # ------------------------------------
     - name: Cache Playwright Browsers
       id: playwright-browsers-cache
@@ -51,6 +51,12 @@ jobs:
     - name: Install Playwright Browsers
       if: steps.playwright-browsers-cache.outputs.cache-hit != 'true'
       run: pnpm exec playwright install --with-deps
+
+    # Install only dependencies
+    # Browser installation uses cache, but dependencies must be installed without using cache or the following error occurs
+    # `Error: browserType.launch: Target page, context or browser has been closed`
+    - name: Install Playwright dependencies
+      run: pnpm exec playwright install-deps
 
     # ------------------------------------
     # Run Playwright tests
