--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 		"vitest": "^3.0.6"
 	},
 	"engines": {
-		"node": ">=22.0.0"
+		"node": "22.x"
 	},
 	"packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
