fix: Update biome.jsonc to ignore coverage and playwright-report directories

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [".next"]
+		"ignore": [".next", "coverage", "playwright-report"]
 	},
 	"formatter": {
 		"enabled": true,
