--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@types/react-dom": "^19",
 		"@vitejs/plugin-react": "^4.3.4",
 		"@vitest/coverage-v8": "^3.0.6",
+		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
 		"postcss": "^8",
 		"tailwindcss": "^4.0.8",
