--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint",
 		"format": "biome format --write",
 		"check": "biome check --write",
+		"commitlint": "commitlint --edit $1",
 		"unit": "vitest",
 		"coverage": "vitest run --coverage",
 		"coverage:open": "vitest run --coverage && open coverage/index.html",
@@ -32,6 +33,9 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"@commitlint/cli": "^19.7.1",
+		"@commitlint/config-conventional": "^19.7.1",
+		"@commitlint/types": "^19.5.0",
 		"@playwright/test": "^1.50.1",
 		"@tailwindcss/postcss": "^4.0.8",
 		"@testing-library/dom": "^10.4.0",
