--- a/.github/workflows/semantic-pull-request.yml
+++ b/.github/workflows/semantic-pull-request.yml
@@ -1,10 +1,7 @@
 name: 👩🏻‍🔧 Lint PR title
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  pull_request_target:
     types: [opened, edited, reopened, synchronize]
 
 permissions:
