--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -24,6 +24,18 @@ jobs:
       run: pnpm install --frozen-lockfile
 
     # ------------------------------------
+    # Set Vercel environment to .env.local
+    # ------------------------------------
+    - name: Install Vercel CLI
+      run: npm install --global vercel@latest
+
+    - name: Pull Environment Variables
+      run: vercel env pull .env.local --yes --token ${{ secrets.VERCEL_TOKEN }}
+      env:
+        VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+        VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+
+    # ------------------------------------
     # Build Next.js using cache
     # ------------------------------------
     - name: Cache Next.js build
