--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.0.2",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"valibot": "1.0.0-rc.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
