--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@playwright/test": "^1.50.1",
 		"@tailwindcss/postcss": "^4.0.8",
 		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@types/node": "^22",
 		"@types/react": "^19",
