--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"next": "15.2.1",
 		"next-intl": "4.0.0-beta-4106641",
 		"next-themes": "^0.4.4",
+		"octokit": "^4.1.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
