--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
+		"@octokit/core": "^6.1.4",
+		"@octokit/plugin-rest-endpoint-methods": "^13.3.1",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
