--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@hookform/resolvers": "^4.1.3",
 		"@octokit/core": "^6.1.4",
 		"@octokit/plugin-rest-endpoint-methods": "^13.3.1",
+		"@octokit/types": "^13.8.0",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
