--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
 		"postcss": "^8.5.3",
+		"supabase": "^2.19.7",
 		"tailwindcss": "^4.0.14",
 		"typescript": "^5.8.2",
 		"vite-tsconfig-paths": "^5.1.4",
