--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"recharts": "^2.15.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
-		"valibot": "1.0.0-rc.4"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
