--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 		"e2e:watch": "PWTEST_WATCH=1 playwright test"
 	},
 	"dependencies": {
+		"@ai-sdk/anthropic": "^1.1.17",
 		"@hookform/resolvers": "^4.1.3",
+		"@mastra/core": "^0.6.0",
 		"@octokit/core": "^6.1.4",
 		"@octokit/plugin-rest-endpoint-methods": "^13.3.1",
 		"@octokit/types": "^13.8.0",
