feat: Add Tailwind CSS Typography and Markdown support to package.json

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.49.1",
 		"@t3-oss/env-nextjs": "^0.12.0",
+		"@tailwindcss/typography": "^0.5.16",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
@@ -50,7 +51,9 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"react-markdown": "^10.1.0",
 		"recharts": "^2.15.1",
+		"remark-gfm": "^4.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
