--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
 		"@tailwindcss/postcss": "^4.0.14",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.2.0",
+		"@testing-library/react": "^14.2.1",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^22.13.10",
 		"@types/react": "^19.0.11",
@@ -90,13 +90,14 @@
 		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
 		"playwright": "^1.51.1",
-		"postcss": "^8.5.3",
+		"postcss": "^8.4.35",
 		"storybook": "^8.6.7",
 		"supabase": "^2.19.7",
-		"tailwindcss": "^4.0.14",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.8.2",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.0.9"
+		"vitest": "^3.0.9",
+		"vitest-browser-react": "^0.1.1"
 	},
 	"engines": {
 		"node": "22.x"
