--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@commitlint/config-conventional": "^19.8.0",
 		"@commitlint/types": "^19.8.0",
 		"@playwright/test": "^1.51.1",
+		"@storybook/addon-a11y": "^8.6.7",
 		"@storybook/addon-essentials": "^8.6.7",
 		"@storybook/addon-onboarding": "^8.6.7",
 		"@storybook/blocks": "^8.6.7",
