chore: Update ignore patterns in biome.jsonc to exclude storybook-static directory

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [".next", "coverage", "playwright-report"]
+		"ignore": [".next", "coverage", "storybook-static/**", "playwright-report"]
 	},
 	"formatter": {
 		"enabled": true,
