--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"react-markdown": "^10.1.0",
 		"recharts": "^2.15.1",
 		"remark-gfm": "^4.0.1",
+		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
