chore(e2e): Update environment variable pull command for preview
Run Playwright test on Preview environment

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -10,6 +10,11 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    env:
+      SUPABASE_PROJECT_ID: ${{ secrets.PREVIEW_SUPABASE_PROJECT_ID }}
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.PREVIEW_SUPABASE_ACCESS_TOKEN }}
+      SUPABASE_DB_PASSWORD: ${{ secrets.PREVIEW_SUPABASE_DB_PASSWORD }}
+
     steps:
     - uses: actions/checkout@v4
 
@@ -29,12 +34,37 @@ jobs:
     - name: Install Vercel CLI
       run: npm install --global vercel@latest
 
-    - name: Pull Environment Variables
-      run: vercel env pull .env.local --yes --token ${{ secrets.VERCEL_TOKEN }}
+    - name: Pull Preview Environment Variables
+      run: vercel env pull .env.local --environment preview --yes --token ${{ secrets.VERCEL_TOKEN }}
       env:
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
+    # ------------------------------------
+    # Reset Supabase Database
+    # ------------------------------------
+    - name: Install Supabase CLI
+      uses: supabase/setup-cli@v1
+      with:
+        version: latest
+
+    - name: Link to the project
+      run: supabase link --project-ref $SUPABASE_PROJECT_ID
+
+    - name: Push Supabase Database
+      run: supabase db push
+
+    - name: Reset Supabase Database
+      run: |
+        # Read variables from .env.local
+        export SUPABASE_PROJECT_ID=$(grep SUPABASE_PROJECT_ID .env.local | cut -d '=' -f2 | sed 's/"//g')
+        export SUPABASE_DB_PASSWORD=$(grep SUPABASE_DB_PASSWORD .env.local | cut -d '=' -f2 | sed 's/"//g')
+        # echo "SUPABASE_PROJECT_ID: $SUPABASE_PROJECT_ID"
+        # echo "Extracted password (length only for security): ${#SUPABASE_DB_PASSWORD} characters"
+        # Link to the project and reset remote database
+        echo "yes" | supabase db reset --linked
+        # echo "yes" | npx supabase db remote commit
+        # echo "yes" | npx supabase db push
     # ------------------------------------
     # Build Next.js using cache
     # ------------------------------------
