chore(vscode): Enable word wrap in editor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
 		"source.organizeImports.biome": "explicit"
 	},
 	"editor.rulers": [80],
-	"editor.tabSize": 2
+	"editor.tabSize": 2,
+	"editor.wordWrap": "on"
 }
