--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@supabase/supabase-js": "^2.49.1",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tanstack/react-query": "^5.69.0",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
