--- a/.github/workflows/run-migration-and-reset-db-on-preview.yml
+++ b/.github/workflows/run-migration-and-reset-db-on-preview.yml
@@ -1,4 +1,4 @@
-name: 🔀 Run migrations to Preview environment
+name: 🔀 Run migrations and reset database on Preview environment
 
 on:
   pull_request:
@@ -37,7 +37,7 @@ jobs:
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
     # ------------------------------------
-    # Migrate Supabase Database
+    # Run migrations
     # ------------------------------------
     - name: Install Supabase CLI
       uses: supabase/setup-cli@v1
@@ -56,3 +56,10 @@ jobs:
 
     - name: Run migrations
       run: supabase migration up
+
+    # ------------------------------------
+    # Reset Supabase Database
+    # ------------------------------------
+    - name: Reset Supabase Database
+      run: |
+        echo "yes" | supabase db reset --linked
