--- a/.github/workflows/run-migration-and-reset-db-on-preview.yml
+++ b/.github/workflows/run-migration-and-reset-db-on-preview.yml
@@ -99,7 +99,6 @@ jobs:
         set -e
         echo "yes" | supabase db reset --linked
 
-  # Job always running - output success, failure, or skip
   result:
     needs: [check-paths, migration]
     runs-on: ubuntu-latest
@@ -123,5 +122,5 @@ jobs:
 
   call-e2e-test:
     needs: result
-    if: needs.result.outputs.migration_result != 'failure'
+    if: always() && needs.result.outputs.migration_result != 'failure'
     uses: ./.github/workflows/e2e-test-on-preview.yml
