--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
 		"format": "biome format --write",
 		"check": "biome check --write",
 		"commitlint": "commitlint --edit $1",
-		"test": "vitest",
-		"coverage": "vitest run --coverage",
-		"coverage:open": "vitest run --coverage && open coverage/index.html",
+		"test": "vitest --run",
+		"test:watch": "vitest watch",
+		"test:ui": "vitest --ui",
+		"test:update": "vitest --run --update",
+		"test:update:watch": "vitest --watch --update",
+		"test:coverage": "vitest run --coverage",
+		"test:coverage:open": "vitest run --coverage && open coverage/index.html",
 		"e2e": "playwright test",
 		"e2e:ui": "playwright test --ui",
 		"e2e:watch": "PWTEST_WATCH=1 playwright test",
