--- a/.github/workflows/run-migration-and-reset-db-on-preview.yml
+++ b/.github/workflows/run-migration-and-reset-db-on-preview.yml
@@ -89,7 +89,8 @@ jobs:
     - name: Run migrations
       run: |
         set -e
-        supabase migration up
+        # supabase migration up
+        supabase db push
 
     # ------------------------------------
     # Reset Supabase Database
