--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
 		"playwright": "^1.51.1",
 		"postcss": "^8.5.3",
 		"storybook": "^8.6.11",
+		"storybook-addon-tag-badges": "^1.4.0",
 		"supabase": "^2.20.5",
 		"tailwindcss": "^4.0.17",
 		"typescript": "^5.8.2",
