--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"@storybook/blocks": "^8.6.11",
 		"@storybook/experimental-addon-test": "^8.6.11",
 		"@storybook/experimental-nextjs-vite": "8.6.11",
+		"@storybook/manager-api": "^8.6.11",
 		"@storybook/react": "^8.6.11",
 		"@storybook/test": "^8.6.11",
 		"@tailwindcss/postcss": "^4.0.17",
