--- a/package.json
+++ b/package.json
@@ -87,12 +87,14 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/glob": "^8.1.0",
 		"@types/node": "^22.13.14",
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"@vitest/browser": "3.0.9",
 		"@vitest/coverage-v8": "^3.0.9",
+		"glob": "^11.0.1",
 		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
 		"playwright": "^1.51.1",
