--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"@storybook/addon-a11y": "^8.6.11",
 		"@storybook/addon-essentials": "^8.6.11",
 		"@storybook/addon-onboarding": "^8.6.11",
+		"@storybook/addon-themes": "^8.6.11",
 		"@storybook/blocks": "^8.6.11",
 		"@storybook/experimental-addon-test": "^8.6.11",
 		"@storybook/experimental-nextjs-vite": "8.6.11",
