--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@octokit/core": "^6.1.4",
 		"@octokit/plugin-rest-endpoint-methods": "^13.5.0",
 		"@octokit/types": "^13.10.0",
+		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-dropdown-menu": "^2.1.6",
