--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"octokit": "^4.1.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-error-boundary": "^5.0.0",
 		"react-hook-form": "^7.55.0",
 		"react-markdown": "^10.1.0",
 		"recharts": "^2.15.1",
