fix: Update utils alias path in components.json

--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
 	},
 	"aliases": {
 		"components": "@/shared/components",
-		"utils": "@/shared/utils",
+		"utils": "@/shared/utils/cn",
 		"ui": "@/shared/ui",
 		"lib": "@/shared/lib",
 		"hooks": "@/shared/hooks"
