--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
 		"@vitejs/plugin-react": "^4.3.4",
 		"@vitest/browser": "3.1.1",
 		"@vitest/coverage-v8": "^3.1.1",
+		"better-supabase-types": "^2.7.6",
 		"glob": "^11.0.1",
 		"husky": "^9.1.7",
 		"jsdom": "^26.0.0",
