chore: Update schema generation process

--- a/.betterrc.json
+++ b/.betterrc.json
@@ -1,5 +1,5 @@
 {
-	"input": "./src/shared/original-supabase-schema.ts",
+	"input": "./src/shared/_schema.ts",
 	"output": "./src/shared/schema.ts",
 	"force": true,
 	"singular": true
