--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tanstack/react-query": "^5.72.2",
+		"@tanstack/react-table": "^8.21.2",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
