--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.487.0",
 		"next": "15.3.0",
+		"motion": "^12.6.3",
 		"next-intl": "4.0.2",
 		"next-themes": "^0.4.6",
 		"octokit": "^4.1.2",
