--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.487.0",
 		"next": "15.3.0",
 		"motion": "^12.6.3",
@@ -79,6 +80,7 @@
 		"next-themes": "^0.4.6",
 		"octokit": "^4.1.2",
 		"react": "^19.1.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.1.0",
 		"react-error-boundary": "^5.0.0",
 		"react-hook-form": "^7.55.0",
