--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@radix-ui/react-alert-dialog": "^1.1.7",
 		"@radix-ui/react-avatar": "^1.1.4",
 		"@radix-ui/react-checkbox": "^1.1.5",
+		"@radix-ui/react-dialog": "^1.1.7",
 		"@radix-ui/react-dropdown-menu": "^2.1.7",
 		"@radix-ui/react-label": "^2.1.3",
 		"@radix-ui/react-popover": "^1.1.7",
@@ -72,6 +73,7 @@
 		"@vercel/speed-insights": "^1.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.487.0",
 		"next": "15.3.0",
