--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"motion": "^12.6.3",
 		"next-intl": "4.0.2",
 		"next-themes": "^0.4.6",
+		"nuqs": "^2.4.1",
 		"octokit": "^4.1.2",
 		"react": "^19.1.0",
 		"react-day-picker": "^8.10.1",
