--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
 	},
 	"dependencies": {
 		"@ai-sdk/anthropic": "^1.2.9",
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/modifiers": "^9.0.0",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^5.0.1",
 		"@mastra/core": "^0.8.2",
 		"@octokit/core": "^6.1.4",
