--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"lucide-react": "^0.487.0",
 		"next": "15.3.0",
 		"motion": "^12.6.3",
+		"nanoid": "^5.1.5",
 		"next-intl": "4.0.2",
 		"next-themes": "^0.4.6",
 		"nuqs": "^2.4.1",
