chore: Update lefthook configuration for pre-commit and commit-msg hooks

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -40,3 +40,22 @@
 #
 #     - script: "hello.go"
 #       runner: go run
+
+pre-commit:
+  parallel: true
+  commands:
+    format:
+      glob: "**/*.{js,jsx,ts,tsx,json,css,md}"
+      run: pnpm run format
+    check:
+      glob: "**/*.{js,jsx,ts,tsx}"
+      run: pnpm run check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
+      stage_fixed: true
+    test:
+      run: pnpm test
+
+commit-msg:
+  parallel: false
+  commands:
+    commitlint:
+      run: pnpm commitlint --edit {1}
