fix: Update lefthook commands
```
--no-errors-on-unmatched internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ No such file or directory (os error 2)

  ⚠ This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.

--files-ignore-unknown=true internalError/io  INTERNAL  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ No such file or directory (os error 2)

  ⚠ This diagnostic was derived from an internal Biome error. Potential bug, please report it if necessary.

Checked 0 files in 109µs. No fixes applied.
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ No files were processed in the specified paths.

 ELIFECYCLE  Command failed with exit code 1.
```

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -46,10 +46,10 @@ pre-commit:
   commands:
     format:
       glob: "**/*.{js,jsx,ts,tsx,json,css,md}"
-      run: pnpm run format
+      run: pnpm format
     check:
       glob: "**/*.{js,jsx,ts,tsx}"
-      run: pnpm run check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
+      run: pnpm check --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
     test:
       run: pnpm test
