--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -29,7 +29,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright browsers
-        run: pnpm exec playwright install chromium
+        run: pnpm --filter @nito/web exec playwright install chromium
 
       - name: Run Storybook tests
-        run: pnpm test -- --project=storybook
+        run: pnpm --filter @nito/web test -- --project=storybook
