fix: Update GitHub Actions in production env for monorepo structure

--- a/.github/workflows/run-migration-to-production.yml
+++ b/.github/workflows/run-migration-to-production.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'supabase/migrations/**'
+      - 'apps/web/supabase/migrations/**'
 
 jobs:
   migration:
@@ -32,7 +32,7 @@ jobs:
       run: npm install --global vercel@latest
 
     - name: Pull Production Environment Variables
-      run: vercel env pull .env.local --environment production --yes --token ${{ secrets.VERCEL_TOKEN }}
+      run: vercel env pull apps/web/.env.local --environment production --yes --token ${{ secrets.VERCEL_TOKEN }}
       env:
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -48,13 +48,14 @@ jobs:
     # Use Vercel environment variables
     - name: Link to the project
       run: |
-        export SUPABASE_PROJECT_ID=$(grep SUPABASE_PROJECT_ID .env.local | cut -d '=' -f2 | sed 's/"//g')
-        export SUPABASE_DB_PASSWORD=$(grep SUPABASE_DB_PASSWORD .env.local | cut -d '=' -f2 | sed 's/"//g')
-        export SUPABASE_ACCESS_TOKEN=$(grep SUPABASE_ACCESS_TOKEN .env.local | cut -d '=' -f2 | sed 's/"//g')
+        export SUPABASE_PROJECT_ID=$(grep SUPABASE_PROJECT_ID apps/web/.env.local | cut -d '=' -f2 | sed 's/"//g')
+        export SUPABASE_DB_PASSWORD=$(grep SUPABASE_DB_PASSWORD apps/web/.env.local | cut -d '=' -f2 | sed 's/"//g')
+        export SUPABASE_ACCESS_TOKEN=$(grep SUPABASE_ACCESS_TOKEN apps/web/.env.local | cut -d '=' -f2 | sed 's/"//g')
         if [ -z "$SUPABASE_PROJECT_ID" ] || [ -z "$SUPABASE_DB_PASSWORD" ]; then
           echo "Error: Missing Supabase environment variables"
           exit 1
         fi
+        cd apps/web
         supabase link --project-ref $SUPABASE_PROJECT_ID --password $SUPABASE_DB_PASSWORD
       env:
         SUPABASE_ACCESS_TOKEN: $SUPABASE_ACCESS_TOKEN
@@ -62,4 +63,5 @@ jobs:
     - name: Run migrations
       run: |
         set -e
+        cd apps/web
         supabase db push
