--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
 		"@commitlint/types": "^19.8.0",
-		"lefthook": "^1.11.9"
+		"lefthook": "^1.11.9",
+		"@biomejs/biome": "1.9.4"
 	}
 }
