--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -72,7 +72,7 @@
 		"@supabase/supabase-js": "^2.49.4",
 		"@t3-oss/env-nextjs": "^0.12.0",
 		"@tailwindcss/typography": "^0.5.16",
-		"@tanstack/react-query": "^5.73.3",
+		"@tanstack/react-query": "^5.72.2",
 		"@tanstack/react-table": "^8.21.2",
 		"@vercel/analytics": "^1.5.0",
 		"@vercel/speed-insights": "^1.2.0",
@@ -120,7 +120,7 @@
 		"@storybook/react": "^8.6.12",
 		"@storybook/test": "^8.6.12",
 		"@tailwindcss/postcss": "^4.1.3",
-		"@tanstack/react-query-devtools": "^5.72.3",
+		"@tanstack/react-query-devtools": "^5.72.2",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
@@ -130,8 +130,8 @@
 		"@types/react": "^19.1.1",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.3.4",
-		"@vitest/browser": "^1.4.0",
-		"@vitest/coverage-v8": "^1.4.0",
+		"@vitest/browser": "3.1.1",
+		"@vitest/coverage-v8": "^3.1.1",
 		"better-supabase-types": "^2.7.6",
 		"glob": "^11.0.1",
 		"jsdom": "^26.0.0",
@@ -144,7 +144,7 @@
 		"tailwindcss": "^4.1.3",
 		"typescript": "^5.8.3",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^1.4.0",
+		"vitest": "^3.1.1",
 		"vitest-browser-react": "^0.1.1"
 	},
 	"engines": {
