chore: Comment out pull request triggers in Storybook workflow
Maybe this is Vitest bug??

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,9 +2,9 @@
 
 name: 📚 Storybook
 
-on:
-  pull_request:
-    types: [opened, reopened, synchronize]
+on: {}
+  # pull_request:
+    # types: [opened, reopened, synchronize]
 
 jobs:
   test:
